@@ -12,4 +12,4 @@ defined('_JEXEC') or die;
 // Include the component HTML helpers.
 JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
 ?>
-<?php echo JHtml::_('access.usergroups', 'jform[groups]', array_keys($this->groups)); ?>
+<?php echo JHtml::_('access.usergroups', 'jform[groups]', $this->groups); ?>
